# sle

./: .gitignore  README.md  create_3d_plot.py  eP1-05_ROMIJNDERS_StrideLengthEstimationFromAnAnkleWornIMUInParkinsonsDisease.pptx  main.py  pyproject.toml  results.csv  results_ank_markers_15Hz.csv  results_ankle_markers.csv  results_heel_markers.csv  test.py
sle/data_utils/: data_loader.py  preprocessing.py
sle/event_detection/: __init__.py  _salarian_gait_event_detection.py
sle/stride_segmentation/: __init__.py  _hori_stride_segmentation.py
